projects no longer jumpy on hover

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -143,7 +143,6 @@ ul {
     z-index: 10;
     background-color: $red-link;
     color: white;
-    // border: 4px solid $red-link;
     font-family: "BoldSans";
     text-align: center;
     padding: 12px;
@@ -179,9 +178,9 @@ ul {
         min-height: 0;
         color: inherit;
         border-bottom: none;
+
         &:hover {
             box-shadow: none;
-            font-size: 105%;
         }
     }
 
@@ -201,11 +200,32 @@ ul {
         margin: 3rem 4rem;
     }
 
-    #sortable-tables, #not-my-type, #pymcsqlface {
+    .white-bg-container {
+      p {
+        background-color: white;
+        opacity: 0.7;
+        color: black;
+      }
+
+      &:hover {
         p {
-            background-color: rgba(255, 255, 255, 0.7);
-            color: black;
+          opacity: 1.0;
         }
+      }
+    }
+
+    .black-bg-container {
+      p {
+        background-color: black;
+        opacity: 0.7;
+        color: white;
+      }
+
+      &:hover {
+        p {
+          opacity: 1.0;
+        }
+      }
     }
 
     #sortable-tables {
@@ -222,10 +242,6 @@ ul {
 
     #paintings {
         background-image: url("/static/images/cv/paintings1.jpeg");
-        p {
-            background-color: rgba(0, 0, 0, 0.6);
-            color: white;
-        }
     }
 }
 
@@ -242,7 +258,6 @@ ul {
     }
 
     div {
-        // margin: auto;
         margin: 2rem;
         padding:1.5rem;
         border: 2px solid black;
